# gn-template

./: BUILD.gn  README.md  main.cc
buildconfig/: BUILD.gn  BUILDCONFIG.gn
buildconfig/toolchain/macos/: BUILD.gn
gnconfig/: BUILD.gn  BUILDCONFIG.gn  LICENSE  README.md
gnconfig/toolchain/linux/: BUILD.gn
