config("global_config") {
  cflags_cc = [ "-std=c++17" ]
}

config("executable") {
  if (host_os == "mac") {
  } else if (host_os == "linux") {
    ldflags = [
      # ld.so understands the string $ORIGIN (or equivalently ${ORIGIN}) in an rpath
      # specification (DT_RPATH or DT_RUNPATH) to mean the directory containing the
      # application executable.
      "-Wl,-rpath=\$ORIGIN",
      #"-Wl,-rpath-link=\$ORIGIN",
    ]
  }
}

config("shared_library") {
  cflags = [ "-fPIC" ]
}

config("static_libaray") {
}

config("debug") {
  cflags = [
    "-g",
    "-O0",
    "-Wall",
    "-Wextra",
  ]
}

config("release") {
  cflags = [
    "-O3",
    "-Wall",
    "-Wextra",
    "-Werror",
  ]
  defines = [ "NDEBUG" ]
}

config("unittest") {
  cflags = [
    "-g",
    "-O0",
    "-fpermissive",
    "-fno-access-control",
  ]
}

config("asan") {
  ldflags = [ "-fsanitize=address" ]
}
config("ubsan") {
  ldflags = [ "-fsanitize=undefined" ]
}

config("coverage") {
  cflags = [
    "-fprofile-arcs",
    "-ftest-coverage",
  ]
  ldflags = [
    "--coverage",
    "-lgcov",
  ]
}

config("homebrew") {
  include_dirs = [ "/opt/homebrew/include" ]
  lib_dirs = [ "/opt/homebrew/lib" ]
}
