declare_args() {
  use_clang = false
  use_strict_mode = false
  build_type = "debug"
  use_asan = false
  use_ubsan = false
}

if (host_os == "mac") {
  set_default_toolchain("toolchain/macos:clang")
} else {
  if (use_clang) {
    set_default_toolchain("toolchain/linux:clang")
  } else {
    set_default_toolchain("toolchain/linux:gcc")
  }
}

set_defaults("executable") {
  configs = [ "//buildconfig:global_config" ]
  configs += [ "//buildconfig:executable" ]

  if (build_type == "release") {
    configs += [ "//buildconfig:release" ]
  } else if (build_type == "unittest") {
    configs += [ "//buildconfig:unitest" ]
  } else if (build_type == "debug") {
    configs += [ "//buildconfig:debug" ]
  }
  if (use_asan) {
    configs += [ "//buildconfig:asan" ]
  }
  if (use_ubsan) {
    configs += [ "//buildconfig:ubsan" ]
  }
}

set_defaults("shared_library") {
  configs = [ "//buildconfig:global_config" ]
  configs += [ "//buildconfig:shared_library" ]

  if (build_type == "release") {
    configs += [ "//buildconfig:release" ]
  } else if (build_type == "unittest") {
    configs += [ "//buildconfig:unitest" ]
  } else if (build_type == "debug") {
    configs += [ "//buildconfig:debug" ]
  }
  if (use_asan) {
    configs += [ "//buildconfig:asan" ]
  }
  if (use_ubsan) {
    configs += [ "//buildconfig:ubsan" ]
  }
}

set_defaults("static_library") {
  configs = [ "//buildconfig:global_config" ]
  configs += [ "//buildconfig:static_libaray" ]
  if (build_type == "release") {
    configs += [ "//buildconfig:release" ]
  } else if (build_type == "unittest") {
    configs += [ "//buildconfig:unitest" ]
  } else if (build_type == "debug") {
    configs += [ "//buildconfig:debug" ]
  }
  if (use_asan) {
    configs += [ "//buildconfig:asan" ]
  }
  if (use_ubsan) {
    configs += [ "//buildconfig:ubsan" ]
  }
}
